<resources>
    <string name="app_name">android</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">验证码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bottom_tab_home">主页</string>
    <string name="bottom_tab_property">物业</string>
    <string name="bottom_tab_neighbourhood">邻里</string>
    <string name="bottom_tab_shopping">便民</string>
    <string name="bottom_tab_me">我</string>

    <string name="fragment_property_tab_private">个人</string>
    <string name="fragment_property_tab_public">公共</string>
    <string name="fragment_property_tab_watch">关注</string>

    <string name="title_activity_landing">智·社区</string>
    <string name="func_entry">5</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_entry">MainEntryActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auto_loc">定位</string>
    <string name="msg">消息</string>
    <string name="living_where">你住在哪里？</string>
    <string name="notify_content">2018年1月28日 - 为有效应对此次降雪可能出现的积雪及结冰问题,市城市冰雪灾害应急指挥部办公室昨晚20时20分发布城市冰雪灾害黄色预警,并启动城市冰雪灾害Ⅲ级应急响应...</string>
    <string name="notify_detail_link"><u>详细</u></string>
    <string name="property_issue_status">状态</string>
    <string name="property_issue_category">类别</string>
    <string name="property_issue_watch">关注</string>
    <string name="property_issue_rating">评分</string>

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_property_issue_submit">PropertyIssueSubmitActivity</string>
</resources>
