<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgContent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <!-- LEFT TITLE PART -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="4"
        android:background="@color/bgTitleLeft"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/title_property_issue_days_passed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_time_label"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="三天前"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


    </RelativeLayout>
    <!-- RIGHT TITLE PART -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bgTitleRight"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/title_property_issue_loc"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_from_to_dots"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:layout_toRightOf="@+id/title_from_to_dots"
            android:drawableLeft="@drawable/ic_location"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"

            android:text="西大门"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/title_from_to_dots_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/title_property_issue_loc"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:layout_toRightOf="@+id/title_from_to_dots"
            android:src="@color/contentDividerLine" />

        <TextView
            android:id="@+id/title_property_issue_status"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:text="已提交"
            android:textSize="12sp" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_property_issue_status"
            android:layout_alignLeft="@id/title_property_issue_status"
            android:layout_alignStart="@id/title_property_issue_status"
            android:layout_below="@+id/title_from_to_dots_divider"
            android:text="@string/property_issue_status" />

        <ImageView
            android:id="@+id/title_weight"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/stars" />

        <!--<TextView-->
        <!--android:id="@+id/title_weight"-->
        <!--style="@style/TitleBadgeText"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:text="@string/weight_mock" />-->

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_weight"
            android:layout_alignLeft="@id/title_weight"
            android:layout_alignStart="@id/title_weight"
            android:layout_below="@+id/title_from_to_dots_divider"
            android:text="@string/property_issue_rating" />

        <TextView
            android:id="@+id/title_property_issue_category"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="门"
            android:textSize="12sp" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_property_issue_category"
            android:layout_alignLeft="@id/title_property_issue_category"
            android:layout_alignStart="@id/title_property_issue_category"
            android:layout_below="@+id/title_from_to_dots_divider"
            android:text="@string/property_issue_category" />

    </RelativeLayout>
</LinearLayout>