<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgContentTop"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <RelativeLayout
            android:id="@+id/property_issue_barnar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/property_issue_loc"
                style="@style/TitleBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/ic_location"
                android:drawableTint="@color/colorPrimary"
                android:text="西大门"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/property_issue_id"
                style="@style/TitleBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/order_id_mock"
                android:textColor="@android:color/white" />

            <!--<TextView-->
            <!--android:id="@+id/property_issue_id"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:text="@string/order_id_mock"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="20sp"-->
            <!--android:textStyle="bold" />-->
            <ImageView
                android:id="@+id/property_issue_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_icon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/property_issue_barnar"
            android:orientation="vertical">

            <com.baoyachi.stepview.HorizontalStepView
                android:id="@+id/property_issue_step_view"
                style="@style/TitleBadgeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!--avatar and name part -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/content_avatar_title"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="报修人" />

            <ImageView
                android:id="@+id/content_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@id/content_avatar_title"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar" />

            <TextView
                android:id="@+id/content_name_view"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/content_avatar"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/content_avatar"
                android:layout_toRightOf="@id/content_avatar"
                android:text="天使爱美丽" />

            <TextView
                android:id="@+id/user_profile_integration_title"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/content_name_view"
                android:layout_alignStart="@id/content_name_view"
                android:layout_below="@id/content_name_view"
                android:text="积分:" />

            <TextView
                android:id="@+id/user_profile_integration"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_name_view"
                android:layout_toEndOf="@id/user_profile_integration_title"
                android:layout_toRightOf="@id/user_profile_integration_title"
                android:text="246" />

            <TextView
                android:id="@+id/vote_start_date_title"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:text="日期" />

            <TextView
                android:id="@+id/property_issue_datatime"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/content_avatar"
                android:layout_alignEnd="@id/vote_start_date_title"
                android:layout_alignRight="@id/content_name_view"
                android:layout_below="@id/vote_start_date_title"
                android:gravity="bottom"
                android:text="@string/delivery_date_mock" />
        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/property_issue_description_title"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="描述"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/property_issue_description"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/property_issue_description_title"
                    android:layout_alignStart="@id/property_issue_description_title"
                    android:layout_below="@id/property_issue_description_title"
                    android:text="@string/notify_content" />

            </RelativeLayout>

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/property_issue_pic_title"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="图片"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_below="@+id/property_issue_pic_title"
                    app:srcCompat="@drawable/ic_cover_4" />
                <!--<TextView-->
                <!--android:id="@+id/content_delivery_date"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignLeft="@id/property_issue_pic_title"-->
                <!--android:layout_alignStart="@id/property_issue_pic_title"-->
                <!--android:layout_below="@id/property_issue_pic_title"-->
                <!--android:text="@string/delivery_date_mock"-->
                <!--android:textColor="@color/mainTextColor"-->
                <!--android:textSize="14sp" />-->

            </RelativeLayout>
        </LinearLayout>
        <!-- request button -->
    </LinearLayout>
</LinearLayout>